Implementing root login
