# models/User.js
@@ -37,8 +37,8 @@ userSchema.pre('save', async function(next) {
     next();
   });
 
-  userSchema.methods.comparePassword = async function (password) {
-    return await bcrypt.compare(password, this.password);
-  };
+  // userSchema.methods.comparePassword = async function (password) {
+  //   return await bcrypt.compare(password, this.password);
+  // };
 
 exports.User = mongoose.model("User", userSchema);
